==> deividAlfa/STM32F429-Discovery-Oscilloscope/Core/Src/adc.c <==
#include "adc.h"

void ADC_change_Frq(uint8_t n)
{

  uint32_t prescaler, period;

  // Timer anhalten
  __HAL_TIM_DISABLE(&ADC_TIM);
  switch(n) {
    case 0 : // 5s=>5Hz=5s
      prescaler=499;period=35999;
    break;
    case 1 : // 2s=>12,5Hz=80ms
      prescaler=499;period=14399;
    break;
    case 2 : // 1s=>25Hz=40ms
      prescaler=499;period=7199;
    break;
    case 3 : // 500ms=>50Hz=20ms
      prescaler=499;period=3599;
    break;
    case 4 : // 200ms=>125Hz=8ms
      prescaler=499;period=1439;
    break;
    case 5 : // 100ms=>250Hz=4ms
      prescaler=499;period=719;
    break;
    case 6 : // 50ms=>500Hz=2ms
      prescaler=499;period=359;
    break;
    case 7 : // 20ms=>1,25kHz=800us
      prescaler=499;period=143;
    break;
    case 8 : // 10ms=>2,5kHz400us
      prescaler=499;period=71;
    break;
    case 9 : // 5ms=>5kHz=200us
      prescaler=499;period=35;
    break;
    case 10 : // 2ms=>12,5kHz=80us
      prescaler=0;period=7199;
    break;
    case 11 : // 1ms=>25kHz=40us
      prescaler=0;period=3599;
    break;
    case 12 : // 500us=>50kHz=20us
      prescaler=0;period=1799;
    break;
    case 13 : // 200us=>125kHz=8us
      prescaler=0;period=719;
    break;
    case 14 : // 100us=>250kHz=4us
      prescaler=0;period=359;
    break;
    case 15 : // 50us=>500kHz=2us
      prescaler=0;period=179;
    break;
    case 16 : // 25us=>1MHz=1us
      prescaler=0;period=89;
    break;
    default :
      prescaler=OSZI_TIM2_PRESCALE;
      period=OSZI_TIM2_PERIODE;
  }

  // einstellen der neuen datae
  	  ADC_TIM.Instance = TIM2;
  	  ADC_TIM.Init.Prescaler = prescaler;
  	  ADC_TIM.Init.Period = period;
  	  ADC_TIM.Init.CounterMode = TIM_COUNTERMODE_UP;
  	  ADC_TIM.Init.ClockDivision = TIM_CLOCKDIVISION_DIV1;
  	  ADC_TIM.Init.AutoReloadPreload = TIM_AUTORELOAD_PRELOAD_ENABLE;

  	  __HAL_TIM_CLEAR_FLAG(&ADC_TIM,TIM_FLAG_UPDATE);
  	  if (HAL_TIM_Base_Init(&ADC_TIM) != HAL_OK)
  	  {
  	    Error_Handler();
  	  }

  // Timer wieder starten, falls notwendig
  if(ADC_UB.status!=ADC_READY) {
    // Timer2 enable
    __HAL_TIM_ENABLE(&ADC_TIM);
  }
}

void ADC_change_Mode(uint8_t mode){

	// Merker setzen
	ADC_UB.dma_status=1;

	// Stop Timer2 triggering the ADC
	__HAL_TIM_DISABLE(&ADC_TIM);

	// Disable interrupts
	__HAL_DMA_DISABLE_IT(hadc1.DMA_Handle,(DMA_IT_HT | DMA_IT_TC));

	// Stop DMA and ADC if already running
	if( (HAL_DMA_GetState(hadc1.DMA_Handle) == HAL_DMA_STATE_BUSY)){
		if(HAL_ADCEx_MultiModeStop_DMA(&hadc1) != HAL_OK){ Error_Handler(); }
	}
	if( (HAL_DMA_GetState(hadc1.DMA_Handle) == HAL_DMA_STATE_ERROR)){
		Error_Handler();
	}
	if( (HAL_DMA_GetState(hadc1.DMA_Handle) != HAL_DMA_STATE_READY)){
		Error_Handler();
	}

	// Clear flags
	__HAL_DMA_CLEAR_FLAG(hadc1.DMA_Handle, (DMA_FLAG_TCIF0_4 | DMA_FLAG_HTIF0_4) );

	// Wait for DMA Stream disable
	while((hdma_adc1.Instance->CR & DMA_SxCR_EN) != RESET);

	// Double Buffer Mode
	if(mode != DMA_MODE_SingleBF) {
		//if(HAL_ADCEx_MultiModeStart_DualBF_DMA(&hadc1,(uint32_t*)&ADC_DMA_Buffer_A, (uint32_t*)&ADC_DMA_Buffer_B, ADC_ARRAY_LEN) != HAL_OK){ Error_Handler(); }

		if(HAL_ADCEx_MultiModeStart_DMA(&hadc1,(uint32_t*)&ADC_DMA_Buffer_A, ADC_ARRAY_LEN) != HAL_OK){ Error_Handler(); }

		// We don't have HAL ADC Dual buffer method, so we have to fiddle a bit :)
		// Abort the ADC DMA Stream that HAL_ADCEx_MultiModeStart_DMA has just enabled.
		if(HAL_DMA_Abort(hadc1.DMA_Handle) != HAL_OK){ Error_Handler(); }

		// Copy the first buffer callbacks to the second buffer (The first buffer callbacks were already set by HAL_ADCEx...)
	    hadc1.DMA_Handle->XferM1CpltCallback = hadc1.DMA_Handle->XferCpltCallback;
	    hadc1.DMA_Handle->XferM1HalfCpltCallback = hadc1.DMA_Handle->XferHalfCpltCallback;

	    // Restart the ADC DMA Stream, now in Dual Buffer mode
	    if(HAL_DMAEx_MultiBufferStart_IT(hadc1.DMA_Handle, (uint32_t)&ADC_COMMON_REGISTER(hadc1)->CDR,
				(uint32_t)&ADC_DMA_Buffer_A, (uint32_t)&ADC_DMA_Buffer_B, ADC_ARRAY_LEN) != HAL_OK){ Error_Handler(); }
	}

	// Single Buffer Mode
	else{
		if(HAL_ADCEx_MultiModeStart_DMA(&hadc1,(uint32_t*)&ADC_DMA_Buffer_A, ADC_ARRAY_LEN) != HAL_OK){ Error_Handler(); }
	}

	// Timer wieder starten, falls notwendig
	if((ADC_UB.status!=ADC_READY) || (mode==DMA_MODE_SingleBF)) {
	// Timer2 enable
	__HAL_TIM_ENABLE(&ADC_TIM);
	}

	// Merker zur�cksetzen
	ADC_UB.dma_status=0;
}

void P_ADC_InitADC(void){

	// Start ADC2 (Slave)
	if(HAL_ADC_Start(&hadc2) != HAL_OK){ Error_Handler(); }

	// Start ADC1 (Master) in dual Buffer mode
	ADC_change_Mode(0);

}

void P_ADC_Start(void){
  // Timer2 enable
  HAL_TIM_Base_Start(&ADC_TIM);
}
