==> wolfraven/STM32F746G-DISCO-OSCI/uboszi_lib/adc.c <==
#include "menu.h"
#include "adc.h"

void ADC_change_Frq(uint32_t n)
{
  LL_TIM_InitTypeDef TIM_InitStruct = {0};
  uint32_t prescaler, period;

  // Timer anhalten
  LL_TIM_DisableCounter(TIM4);

  // On the STM32F746 we use TIM4 (APB1 timer) and therfore have 100MHz (instead of 84MHz on the 32F4).
  // So the timer values need to be adapted for the higher frequency.
  switch(n) {
    case 0 : // 5s=>5Hz=5s
      prescaler=6399;period=3124;    // 5375 -> 6399
    break;
    case 1 : // 2s=>12,5Hz=80ms
      prescaler=3199;period=2499;    // 2687 -> 3199
    break;
    case 2 : // 1s=>25Hz=40ms
      prescaler=1599;period=2499;    // 1343 -> 1599
    break;
    case 3 : // 500ms=>50Hz=20ms
      prescaler=799;period=2499;     // 671 -> 799
    break;
    case 4 : // 200ms=>125Hz=8ms
      prescaler=399;period=1999;     // 335 -> 399
    break;
    case 5 : // 100ms=>250Hz=4ms
      prescaler=199;period=1999;     // 167 -> 199
    break;
    case 6 : // 50ms=>500Hz=2ms
      prescaler=99;period=1999;      // 83 -> 99
    break;
    case 7 : // 20ms=>1,25kHz=800us
      prescaler=49;period=1599;      // 41 -> 49
    break;
    case 8 : // 10ms=>2,5kHz400us
      prescaler=24;period=1599;      // 20 -> 24
    break;
    case 9 : // 5ms=>5kHz=200us
      prescaler=24;period=799;
    break;
    case 10 : // 2ms=>12,5kHz=80us
      prescaler=24;period=319;
    break;
    case 11 : // 1ms=>25kHz=40us
      prescaler=24;period=159;
    break;
    case 12 : // 500us=>50kHz=20us
      prescaler=24;period=79;
    break;
    case 13 : // 200us=>125kHz=8us
      prescaler=24;period=31;
    break;
    case 14 : // 100us=>250kHz=4us
      prescaler=24;period=15;
    break;
    case 15 : // 50us=>500kHz=2us
      prescaler=24;period=7;
    break;
    case 16 : // 25us=>1MHz=1us
      prescaler=24;period=3;
    break;
    default :
      prescaler=OSZI_TIM2_PRESCALE;
      period=OSZI_TIM2_PERIODE;
  }

  TIM_InitStruct.Prescaler = prescaler;
  TIM_InitStruct.CounterMode = LL_TIM_COUNTERMODE_UP;
  TIM_InitStruct.Autoreload = period;
  TIM_InitStruct.ClockDivision = LL_TIM_CLOCKDIVISION_DIV1;
  LL_TIM_Init(TIM4, &TIM_InitStruct);

  // Timer wieder starten, falls notwendig
  if(ADC_UB.status!=ADC_READY) {
    // Timer2 enable
    LL_TIM_EnableARRPreload(TIM4);
    LL_TIM_EnableCounter(TIM4);
  }
}

void ADC_change_Mode(uint32_t n)
{
  DMA_InitTypeDef       DMA_InitStructure;

  // Merker setzen
  ADC_UB.dma_status=1;

  // Timer analten
  LL_TIM_DisableCounter(TIM4);

  // DMA-Disable
  LL_DMA_DisableStream(ADC_DMA, ADC_DMA_STREAM);
  // warten bis DMA-Stream disable
  while(LL_DMA_IsEnabledStream(ADC_DMA, ADC_DMA_STREAM)==ENABLE);
  LL_DMA_DeInit(ADC_DMA, ADC_DMA_STREAM);

  // DMA-Config
  LL_DMA_SetChannelSelection(ADC_DMA, ADC_DMA_STREAM, ADC_DMA_CHANNEL);
  LL_DMA_SetPeriphAddress(ADC_DMA, ADC_DMA_STREAM, (uint32_t)LL_ADC_DMA_GetRegAddr(ADC1,LL_ADC_DMA_REG_REGULAR_DATA));
#ifdef WW_USE_AUDIO_BUFFER_FOR_ADC
  LL_DMA_SetMemoryAddress(ADC_DMA, ADC_DMA_STREAM, (uint32_t)ADC_DMA_Buffer_A_1);
#else
  LL_DMA_SetMemoryAddress(ADC_DMA, ADC_DMA_STREAM, (uint32_t)&ADC_DMA_Buffer_A);
#endif
  LL_DMA_SetDataTransferDirection(ADC_DMA, ADC_DMA_STREAM, LL_DMA_DIRECTION_PERIPH_TO_MEMORY);
  LL_DMA_SetDataLength(ADC_DMA, ADC_DMA_STREAM, ADC1d_ANZ*ADC_ARRAY_LEN);
  LL_DMA_SetPeriphIncMode(ADC_DMA, ADC_DMA_STREAM, LL_DMA_PERIPH_NOINCREMENT);
  LL_DMA_SetMemoryIncMode(ADC_DMA, ADC_DMA_STREAM, LL_DMA_MEMORY_INCREMENT);
  LL_DMA_SetPeriphSize(ADC_DMA, ADC_DMA_STREAM, LL_DMA_PDATAALIGN_HALFWORD);
  LL_DMA_SetMemorySize(ADC_DMA, ADC_DMA_STREAM, LL_DMA_MDATAALIGN_HALFWORD);
  LL_DMA_SetMode(ADC_DMA, ADC_DMA_STREAM, LL_DMA_MODE_CIRCULAR);
  LL_DMA_SetStreamPriorityLevel(ADC_DMA, ADC_DMA_STREAM, LL_DMA_PRIORITY_HIGH);
  //LL_DMA_DisableFifoMode(ADC1_DMA, ADC1_DMA_STREAM);
  LL_DMA_SetFIFOThreshold(ADC_DMA, ADC_DMA_STREAM, LL_DMA_FIFOTHRESHOLD_1_2);
  LL_DMA_SetMemoryBurstxfer(ADC_DMA, ADC_DMA_STREAM, LL_DMA_MBURST_SINGLE);
  LL_DMA_SetPeriphBurstxfer(ADC_DMA, ADC_DMA_STREAM, LL_DMA_PBURST_SINGLE);

  if(n!=1)
  {
    // Double-Buffer-Mode
    LL_DMA_EnableDoubleBufferMode(ADC_DMA, ADC_DMA_STREAM);
#ifdef WW_USE_AUDIO_BUFFER_FOR_ADC
    LL_DMA_SetMemory1Address(ADC_DMA, ADC_DMA_STREAM, (uint32_t)ADC_DMA_Buffer_B_1);
#else
    LL_DMA_SetMemory1Address(ADC_DMA, ADC_DMA_STREAM, (uint32_t)&ADC_DMA_Buffer_B);
#endif
  }
  else
  {
    // Normal Mode
      LL_DMA_DisableDoubleBufferMode(ADC_DMA, ADC_DMA_STREAM);
  }

  // Flags l�schen
  LL_DMA_ClearFlag_TC0(ADC_DMA);
  LL_DMA_ClearFlag_HT0(ADC_DMA);

  // DMA-enable
  LL_DMA_EnableStream(DMA1, LL_DMA_STREAM_0);

  // warten bis DMA-Stream enable
  while(LL_DMA_IsEnabledStream(ADC_DMA, ADC_DMA_STREAM)==DISABLE);

  // NVIC neu initialisieren
  P_ADC_InitNVIC();

  // Timer wieder starten, falls notwendig
  if((ADC_UB.status!=ADC_READY) || (n==1)) {
    // Timer2 enable
    LL_TIM_EnableARRPreload(TIM4);
    LL_TIM_EnableCounter(TIM4);
  }

  // Merker zur�cksetzen
  ADC_UB.dma_status=0;

}

void P_ADC_InitADC(void)
{
  LL_ADC_InitTypeDef ADC_InitStruct = {0};
  LL_ADC_REG_InitTypeDef ADC_REG_InitStruct = {0};
  LL_ADC_CommonInitTypeDef ADC_CommonInitStruct = {0};

  /* PROBLEM:
     WW: ADC was not triggered from TIM4-TRGO update event!!!
   */
  /* ES0290 Rev 6 Page 7/28
     2.2.1 Missed ADC triggers from TIM1/TIM8, TIM2/TIM5/TIM4/TIM6/TRGO or TGRO2 event
     Description
        The ADC external triggers for regular and injected channels by the TIM1, TIM8, TIM2, TIM5,
        TIM4 and TIM6 TRGO or TRGO2 events are missed at the following conditions:
        - Prescaler enabled on the PCLK2 clock.
        - TIMxCLK = 2xADCCLK and the master mode selection (MMS or MMS2 bits in the
          TIMx_CR2 timer register) as reset, update, or compare pulse configuration.
        - TIMxCLK = 4xADCCLK.
     Workarounds
        - For TIM1 and TIM8 TRGO or TRGO 2 events: select the trigger detection on both the
          rising and falling edges. The EXTEN[1:0] or JEXTEN[1:0] bits must be set to 0x11 in
          the ADC_CR2 register.
        - For TIM2/TIM4/TIM5/TIM6/ TRGO or TGRO2 events: enable the DAC peripheral clock
          in the RCC_APB1ENR register.

     WW: So just added the DAC peripheral clock enable in the ADC initialization
         => that solved the problem!!!
   */
  LL_APB1_GRP1_EnableClock(LL_APB1_GRP1_PERIPH_DAC1);

  // Clock Enable
  LL_APB2_GRP1_EnableClock(LL_APB2_GRP1_PERIPH_ADC1|LL_APB2_GRP1_PERIPH_ADC2|LL_APB2_GRP1_PERIPH_ADC3);

  //-------------------------------------
  // ADC-Config (TripleMode)
  //-------------------------------------

  ADC_CommonInitStruct.CommonClock = LL_ADC_CLOCK_SYNC_PCLK_DIV4;
  ADC_CommonInitStruct.Multimode = LL_ADC_MULTI_TRIPLE_REG_SIMULT;
  ADC_CommonInitStruct.MultiTwoSamplingDelay = LL_ADC_MULTI_TWOSMP_DELAY_5CYCLES;
  ADC_CommonInitStruct.MultiDMATransfer = LL_ADC_MULTI_REG_DMA_UNLMT_1; /*!< ADC multimode group regular conversions are transferred by DMA,
                                                                             one DMA channel for all ADC instances (DMA of ADC master),
                                                                             in unlimited mode: DMA transfer requests are unlimited,
                                                                             whatever number of DMA data transferred (number of ADC conversions)
                                                                             is reached. This ADC mode is intended to be used with DMA mode non-circular.
                                                                             Setting of DMA mode 1: 2 or 3 (dual or triple mode) half-words one by one,
                                                                             ADC1 then ADC2 then ADC3. */
  LL_ADC_CommonInit(__LL_ADC_COMMON_INSTANCE(ADC1), &ADC_CommonInitStruct);

  //-------------------------------------
  // ADC1 (Master)
  //-------------------------------------
  ADC_InitStruct.Resolution = LL_ADC_RESOLUTION_12B;
  ADC_InitStruct.DataAlignment = LL_ADC_DATA_ALIGN_RIGHT;
  ADC_InitStruct.SequencersScanMode = LL_ADC_SEQ_SCAN_DISABLE;
  LL_ADC_Init(ADC1, &ADC_InitStruct);
#ifdef WW_ADC_SELF_TRIGGER
  ADC_REG_InitStruct.TriggerSource = LL_ADC_REG_TRIG_SOFTWARE;
#else
  ADC_REG_InitStruct.TriggerSource = LL_ADC_REG_TRIG_EXT_TIM4_TRGO;
#endif
  ADC_REG_InitStruct.SequencerLength = LL_ADC_REG_SEQ_SCAN_DISABLE; // sequencer disable (equivalent to sequencer of 1 rank: ADC conversion on only 1 channel)
  ADC_REG_InitStruct.SequencerDiscont = LL_ADC_REG_SEQ_DISCONT_DISABLE;
  ADC_REG_InitStruct.ContinuousMode = LL_ADC_REG_CONV_SINGLE;
  ADC_REG_InitStruct.DMATransfer = LL_ADC_REG_DMA_TRANSFER_UNLIMITED;
  LL_ADC_REG_Init(ADC1, &ADC_REG_InitStruct);
  LL_ADC_REG_SetFlagEndOfConversion(ADC1, LL_ADC_REG_FLAG_EOC_SEQUENCE_CONV);
  LL_ADC_DisableIT_EOCS(ADC1);
#ifndef WW_ADC_SELF_TRIGGER
  LL_ADC_REG_StartConversionExtTrig(ADC1, LL_ADC_REG_TRIG_EXT_RISING);
#endif

  /**Configure Regular Channel */
  LL_ADC_REG_SetSequencerRanks(ADC1, LL_ADC_REG_RANK_1, LL_ADC_CHANNEL_VREFINT);
  LL_ADC_SetChannelSamplingTime(ADC1, LL_ADC_CHANNEL_VREFINT, LL_ADC_SAMPLINGTIME_3CYCLES);
#if 1
  LL_ADC_SetCommonPathInternalCh(__LL_ADC_COMMON_INSTANCE(ADC1), LL_ADC_PATH_INTERNAL_VREFINT);
#else
  /* Enable the TSVREFE channel*/
  ADC->CCR |= ADC_CCR_TSVREFE;
#endif

  //-------------------------------------
  // ADC2 (Slave)
  //-------------------------------------
  ADC_InitStruct.Resolution = LL_ADC_RESOLUTION_12B;
  ADC_InitStruct.DataAlignment = LL_ADC_DATA_ALIGN_RIGHT;
  ADC_InitStruct.SequencersScanMode = LL_ADC_SEQ_SCAN_DISABLE;
  LL_ADC_Init(ADC2, &ADC_InitStruct);
  //ADC_REG_InitStruct.TriggerSource = LL_ADC_REG_TRIG_EXT_TIM4_TRGO;
  ADC_REG_InitStruct.SequencerLength = LL_ADC_REG_SEQ_SCAN_DISABLE; // sequencer disable (equivalent to sequencer of 1 rank: ADC conversion on only 1 channel)
  ADC_REG_InitStruct.SequencerDiscont = LL_ADC_REG_SEQ_DISCONT_DISABLE;
  ADC_REG_InitStruct.ContinuousMode = LL_ADC_REG_CONV_SINGLE;
  ADC_REG_InitStruct.DMATransfer = LL_ADC_REG_DMA_TRANSFER_NONE;
  LL_ADC_REG_Init(ADC2, &ADC_REG_InitStruct);
  LL_ADC_REG_SetFlagEndOfConversion(ADC2, LL_ADC_REG_FLAG_EOC_UNITARY_CONV);
  LL_ADC_DisableIT_EOCS(ADC2);
  //LL_ADC_REG_StartConversionExtTrig(ADC2, LL_ADC_REG_TRIG_EXT_RISING);
  /**Configure Regular Channel */
  LL_ADC_REG_SetSequencerRanks(ADC2, LL_ADC_REG_RANK_1, LL_ADC_CHANNEL_0);
  LL_ADC_SetChannelSamplingTime(ADC2, LL_ADC_CHANNEL_0, LL_ADC_SAMPLINGTIME_3CYCLES);

  //-------------------------------------
  // ADC3 (Slave)
  //-------------------------------------
  ADC_InitStruct.Resolution = LL_ADC_RESOLUTION_12B;
  ADC_InitStruct.DataAlignment = LL_ADC_DATA_ALIGN_RIGHT;
  ADC_InitStruct.SequencersScanMode = LL_ADC_SEQ_SCAN_DISABLE;
  LL_ADC_Init(ADC3, &ADC_InitStruct);
  //ADC_REG_InitStruct.TriggerSource = LL_ADC_REG_TRIG_EXT_TIM4_TRGO;
  ADC_REG_InitStruct.SequencerLength = LL_ADC_REG_SEQ_SCAN_DISABLE; // sequencer disable (equivalent to sequencer of 1 rank: ADC conversion on only 1 channel)
  ADC_REG_InitStruct.SequencerDiscont = LL_ADC_REG_SEQ_DISCONT_DISABLE;
  ADC_REG_InitStruct.ContinuousMode = LL_ADC_REG_CONV_SINGLE;
  ADC_REG_InitStruct.DMATransfer = LL_ADC_REG_DMA_TRANSFER_NONE;
  LL_ADC_REG_Init(ADC3, &ADC_REG_InitStruct);
  LL_ADC_REG_SetFlagEndOfConversion(ADC3, LL_ADC_REG_FLAG_EOC_UNITARY_CONV);
  LL_ADC_DisableIT_EOCS(ADC3);
  //LL_ADC_REG_StartConversionExtTrig(ADC3, LL_ADC_REG_TRIG_EXT_RISING);
  /**Configure Regular Channel */
  LL_ADC_REG_SetSequencerRanks(ADC3, LL_ADC_REG_RANK_1, LL_ADC_CHANNEL_8);
  LL_ADC_SetChannelSamplingTime(ADC3, LL_ADC_CHANNEL_8, LL_ADC_SAMPLINGTIME_3CYCLES);


#ifdef WW_ADC_SELF_TRIGGER // Just for testing - because trigger did not work
  /* ADC1 interrupt Init */
  LL_ADC_EnableIT_EOCS(ADC1);
  NVIC_SetPriority(ADC_IRQn, NVIC_EncodePriority(NVIC_GetPriorityGrouping(),0, 0));
  NVIC_EnableIRQ(ADC_IRQn);
#endif
}

void P_ADC_Start(void)
{
  //LL_ADC_SetMultiDMATransfer(__LL_ADC_COMMON_INSTANCE(ADC1), LL_ADC_MULTI_REG_DMA_EACH_ADC); //ADC_MultiModeDMARequestAfterLastTransferCmd(ENABLE);
  //LL_ADC_REG_SetDMATransfer(ADC1, LL_ADC_REG_DMA_TRANSFER_UNLIMITED);
  LL_ADC_Enable(ADC1);
  LL_ADC_Enable(ADC2);
  LL_ADC_Enable(ADC3);
  // Timer2 enable
  LL_TIM_EnableARRPreload(TIM4);
  LL_TIM_EnableCounter(TIM4);

#ifdef WW_ADC_SELF_TRIGGER
  LL_ADC_REG_StartConversionSWStart(ADC1);
#endif
}
